# effective-telegram

./: Cargo.toml  main.py
src/: buzzer.rs  display.rs  led.rs  lib.rs  main.rs
